# FastAPI-Template

./: .env.development.example  .env.example  .env.production.example  .env.staging.example  .env.test.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  SECURITY.md  alembic.ini  pyproject.toml
.devcontainer/: Dockerfile  app.env  devcontainer.json  docker-compose.yml  post-create.sh
.devcontainer/schemaspy/: make.sh
.devcontainer/web/: default.conf
.docker/: Dockerfile  Dockerfile.dockerignore  compose.yaml
.github/actions/: setup.yml
.github/workflows/: ci.yml  docs.yml  fastapi.yml  openapi.yml  python_test.yml  sample.yml  schemaspy.yml  setup.yml
app/: __init__.py  logging.conf  main.py  pyproject.toml
app/api/: book_info_fetcher.py  deps.py  router.py
app/api/routes/: auth.py  catalog.py  health.py
app/core/: __init__.py  config.py  logging.py  middleware.py  security.py
app/db/: __init__.py  base.py  session.py
app/errors/: custom_exception.py  exceptions.py  message.py  responses.py
app/middleware/: exception_middleware.py
app/migration/: env.py
app/migration/versions/: 202207041843_added_sample_tables.py  202207052318_added_sample_tables.py  202607190001_initial_schema.py
app/models/: __init__.py  author.py  book.py  setting.py  user.py
app/models/factories/: author.py  book.py
app/repositories/: __init__.py  catalog.py  user.py
app/routers/: __init__.py  book.py  root.py  setting.py
app/schemas/: __init__.py  auth.py  catalog.py  common.py
app/schemas/requests/: book.py
app/schemas/responses/: __init__.py  book.py
app/services/: __init__.py  auth.py  catalog.py
config/env/: base.example  production.example  staging.example  test.example
docs/: AUTHENTICATION.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  TROUBLESHOOTING.md  index.html  swagger-ui.html
test/: conftest.py  test_main.py
test/api/: test_book_info_fetcher.py
test/models/: test_author.py  test_book.py
test/routers/: test_book_router.py
tests/: __init__.py  conftest.py  test_main.py
tests/api/: __init__.py  test_deps.py
tests/core/: __init__.py  test_config.py  test_logging.py  test_security.py
tests/db/: __init__.py  (+1 more)
(+20 files in other folders)
