[project]
name = "fastapi-template"
version = "1.0.0"
description = "Production-ready FastAPI template with async SQLAlchemy and JWT authentication"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "alembic>=1.18.5,<2",
  "asyncpg>=0.31.0,<1",
  "fastapi[standard]>=0.139.2,<0.140",
  "greenlet>=3.2.0,<4",
  "httpx>=0.28.1,<1",
  "pydantic-settings>=2.14.2,<3",
  "pwdlib[argon2]>=0.3.0,<1",
  "pyjwt>=2.13.0,<3",
  "sqlalchemy[asyncio]>=2.0.51,<2.1",
]

[dependency-groups]
dev = [
  "aiosqlite>=0.21.0,<1",
  "bandit>=1.9.4,<2",
  "eralchemy2>=1.4.1,<2",
  "factory-boy>=3.3.3,<4",
  "mypy>=1.17.0,<2",
  "pip-audit>=2.10.1,<3",
  "pytest>=8.4.0,<9",
  "pytest-asyncio>=1.0.0,<2",
  "pytest-cov>=6.2.0,<7",
  "pre-commit>=4.2.0,<5",
  "ruff>=0.12.0,<1",
  "types-factory-boy>=0.4.1,<1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "--strict-markers --import-mode=importlib --cov=app --cov-report=term-missing"
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
