[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
alembic = "^1.6.5"
psycopg2-binary = "^2.9.1"
SQLAlchemy = "^1.4.23"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
isort = "^5.9.3"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
